--- a/FlowLabel/app/src/main/res/layout/activity_main.xml
+++ b/FlowLabel/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.sunquan.flowlabel.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="标签居中"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:textColor="#000000"/>
+
+            <com.example.sunquan.View.FlowLabelLayout
+                android:id="@+id/center_flowlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:LayoutType="0"
+                android:layout_margin="20dp" >
+            </com.example.sunquan.View.FlowLabelLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="标签靠左"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:textColor="#000000"/>
+
+            <com.example.sunquan.View.FlowLabelLayout
+                android:id="@+id/left_flowlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:LayoutType="1"
+                android:layout_margin="20dp"
+                >
+            </com.example.sunquan.View.FlowLabelLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
